--- a/index.html
+++ b/index.html
@@ -58,6 +58,13 @@
     .btn{appearance:none; border:1px solid var(--ring); color:var(--text);
       background:linear-gradient(180deg,#221a3f,#1a1530); padding:9px 14px; border-radius:12px; cursor:pointer; box-shadow:var(--shadow);}
     .btn-accent{background:linear-gradient(180deg,#ffd66a,#ffb94f); color:#1a1306; border:none}
+    /* 버튼에도 Galmuri9 폰트를 강제 적용 */
+button, .btn, button.btn {
+  font-family: 'Galmuri9', ui-sans-serif, system-ui, -apple-system, "Segoe UI",
+               Roboto, "Apple SD Gothic Neo", "Noto Sans KR", Helvetica, Arial !important;
+  font-weight: 400;
+}
+
 
     .grid{display:grid; grid-template-columns:repeat(3,1fr); gap:var(--grid-gap);}
     @media (max-width:980px){ .grid{grid-template-columns:repeat(2,1fr)} }
