--- a/index.html
+++ b/index.html
@@ -170,9 +170,29 @@ button, .btn, button.btn {
     </section>
 
     <section id="gallery" class="grid">
+      <!-- 카드 0: Home Mining (NEW) -->
+<article class="card">
+  <span class="badge-new">NEW ✦</span>
+  <a href="https://x.com/gxrxxxng/status/1983494511054446800?s=46"
+     target="_blank" rel="noopener"
+     aria-label="Home Mining — X에서 보기"
+     style="position:relative; display:block;">
+    <img class="thumb" src="assets/images/251029-mining-thumb.png?v=1"
+         alt="Home Mining pixel art (X에서 보기)" />
+    <span class="badge">▶ Watch on X</span>
+  </a>
+
+  <div class="meta">
+    <h3 class="title">Home Mining ⛏️</h3>
+    <p class="desc">작고 소중한 채굴기. 지금 이 순간에도 일하는 중이다.</p>
+    <div class="row">
+      <span class="tiny"><span class="dot"></span>2025-10-29</span>
+    </div>
+  </div>
+</article>
+
       <!-- 카드 1: Bitcoin Node (NEW 배지 + 썸네일 파일명 수정) -->
       <article class="card">
-        <span class="badge-new">NEW ✦</span>
         <a href="https://x.com/gxrxxxng/status/1983150500251087206?s=46"
            target="_blank" rel="noopener"
            aria-label="Bitcoin Node — X에서 보기"
