--- a/index.html
+++ b/index.html
@@ -170,9 +170,29 @@ button, .btn, button.btn {
     </section>
 
     <section id="gallery" class="grid">
-      <!-- 카드 0: Home Mining (NEW) -->
+      <!-- 카드 0: WHITEPAPER DAY (NEW) -->
 <article class="card">
   <span class="badge-new">NEW ✦</span>
+  <a href="https://x.com/gxrxxxng/status/1983898368670871728?s=46"
+     target="_blank" rel="noopener"
+     aria-label="Whitepaper — X에서 보기"
+     style="position:relative; display:block;">
+    <img class="thumb" src="assets/images/251031-whitepaper-thumb.png?v=1"
+         alt="WHITEPAPER pixel art (X에서 보기)" />
+    <span class="badge">▶ Watch on X</span>
+  </a>
+
+  <div class="meta">
+    <h3 class="title">Bitcoin Whitepaper Day 📖</h3>
+    <p class="desc">한 장의 문서가 세상을 바꾼 순간.</p>
+    <div class="row">
+      <span class="tiny"><span class="dot"></span>2025-10-31</span>
+    </div>
+  </div>
+</article>
+      
+      <!-- 카드 0: Home Mining (NEW) -->
+<article class="card">
   <a href="https://x.com/gxrxxxng/status/1983494511054446800?s=46"
      target="_blank" rel="noopener"
      aria-label="Home Mining — X에서 보기"
