--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@ button, .btn, button.btn {
       </p>
     </section>
 
-    <p class="footer">© <span id="y"></span> Dalbit • Crafted in pixels.</p>
+    <p class="footer">© <span id="y"></span> Dalbit • Crafted in pixels. All rights reserved.</p>
   </main>
 
   <!-- 연도 표기 -->
