--- a/index.html
+++ b/index.html
@@ -273,7 +273,10 @@ button, .btn, button.btn {
 
     <section id="about" class="hero" style="padding-top:40px">
       <h2>About</h2>
-      <p style="color:var(--muted)">빛이 머문 순간들을 픽셀로 기록합니다.</p>
+      <p style="color:var(--muted)">이곳은 X에 올린 픽셀아트들을 한데 모아둔 작은 갤러리입니다.<br>
+각 장면의 기록과 이야기는 ‘Watch on X’를 통해 확인해 주세요.<br>
+방문해 주셔서 감사합니다.
+      </p>
     </section>
 
     <section id="contact" class="hero" style="padding-top:20px">
