--- a/index.html
+++ b/index.html
@@ -170,9 +170,29 @@ button, .btn, button.btn {
     </section>
 
     <section id="gallery" class="grid">
-            <!-- 카드 0: Lightning Payment (NEW) -->
+            <!-- 카드 0: Node Room (NEW) -->
 <article class="card">
   <span class="badge-new">NEW ✦</span>
+  <a href="https://x.com/gxrxxxng/status/1984810557980229668?s=46"
+     target="_blank" rel="noopener"
+     aria-label="Whitepaper — X에서 보기"
+     style="position:relative; display:block;">
+    <img class="thumb" src="assets/images/251102-node room-thumb.png?v=1"
+         alt="Node Room pixel art (X에서 보기)" />
+    <span class="badge">▶ Watch on X</span>
+  </a>
+
+  <div class="meta">
+    <h3 class="title">Lightning Desk 🖥️</h3>
+    <p class="desc">빛이 흐르는 책상 위에서 작은 전류들이 햇살처럼 번진다.</p>
+    <div class="row">
+      <span class="tiny"><span class="dot"></span>2025-10-31</span>
+    </div>
+  </div>
+</article>
+      
+            <!-- 카드 0: Lightning Payment (NEW) -->
+<article class="card">
   <a href="https://x.com/gxrxxxng/status/1984583749791817804?s=46"
      target="_blank" rel="noopener"
      aria-label="Whitepaper — X에서 보기"
