--- a/index.html
+++ b/index.html
@@ -170,9 +170,29 @@ button, .btn, button.btn {
     </section>
 
     <section id="gallery" class="grid">
-            <!-- 카드 0: Node Room (NEW) -->
+        <!-- 카드 0: Legendary Block (NEW) -->
 <article class="card">
   <span class="badge-new">NEW ✦</span>
+  <a href="https://x.com/gxrxxxng/status/1985313578912731348?s=46"
+     target="_blank" rel="noopener"
+     aria-label="Legendary Block — X에서 보기"
+     style="position:relative; display:block;">
+    <img class="thumb" src="assets/images/251103-legendary bitcoin-thumb.png?v=1"
+         alt="Legendary Block pixel art (X에서 보기)" />
+    <span class="badge">▶ Watch on X</span>
+  </a>
+
+  <div class="meta">
+    <h3 class="title">₿ GET! ⚡</h3>
+    <p class="desc">전설의 비트코인을 획득했다! 저장 완료...</p>
+    <div class="row">
+      <span class="tiny"><span class="dot"></span>2025-10-31</span>
+    </div>
+  </div>
+</article>
+      
+            <!-- 카드 0: Node Room (NEW) -->
+<article class="card">
   <a href="https://x.com/gxrxxxng/status/1984810557980229668?s=46"
      target="_blank" rel="noopener"
      aria-label="Whitepaper — X에서 보기"
