--- a/index.html
+++ b/index.html
@@ -170,9 +170,30 @@ button, .btn, button.btn {
     </section>
 
     <section id="gallery" class="grid">
-        <!-- 카드 0: Legendary Block (NEW) -->
+       <!-- 카드 0: Mempool Autumn (NEW) -->
 <article class="card">
   <span class="badge-new">NEW ✦</span>
+  <a href="https://x.com/gxrxxxng/status/1986020994440630536?s=46"
+     target="_blank" rel="noopener"
+     aria-label="Legendary Block — X에서 보기"
+     style="position:relative; display:block;">
+    <img class="thumb" src="assets/images/251105-mempool autumn-thumb.png?v=1"
+         alt="Mempool autumn pixel art (X에서 보기)" />
+    <span class="badge">▶ Watch on X</span>
+  </a>
+
+  <div class="meta">
+    <h3 class="title">Mempool Autumn 🍂</h3>
+    <p class="desc">흩어진 거래들이, 하나의 블록으로 쌓인다.</p>
+    <div class="row">
+      <span class="tiny"><span class="dot"></span>2025-10-31</span>
+    </div>
+  </div>
+</article>
+
+      
+        <!-- 카드 0: Legendary Block (NEW) -->
+<article class="card">
   <a href="https://x.com/gxrxxxng/status/1985313578912731348?s=46"
      target="_blank" rel="noopener"
      aria-label="Legendary Block — X에서 보기"
