--- a/index.html
+++ b/index.html
@@ -170,9 +170,29 @@ button, .btn, button.btn {
     </section>
 
     <section id="gallery" class="grid">
-       <!-- 카드 0: Mempool Autumn (NEW) -->
+        <!-- 카드 0: Palma (NEW) -->
 <article class="card">
   <span class="badge-new">NEW ✦</span>
+  <a href="https://x.com/gxrxxxng/status/1986408424188633455?s=46"
+     target="_blank" rel="noopener"
+     aria-label="Palma — X에서 보기"
+     style="position:relative; display:block;">
+    <img class="thumb" src="assets/images/251106-palma-thumb.png?v=1"
+         alt="Palma pixel art (X에서 보기)" />
+    <span class="badge">▶ Watch on X</span>
+  </a>
+
+  <div class="meta">
+    <h3 class="title">Proof of Read 👀</h3>
+    <p class="desc">낮엔 걸으며, 밤엔 누워서 필독서를 본다.</p>
+    <div class="row">
+      <span class="tiny"><span class="dot"></span>2025-10-31</span>
+    </div>
+  </div>
+</article>
+      
+       <!-- 카드 0: Mempool Autumn (NEW) -->
+<article class="card">
   <a href="https://x.com/gxrxxxng/status/1986020994440630536?s=46"
      target="_blank" rel="noopener"
      aria-label="Legendary Block — X에서 보기"
