--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@ button, .btn, button.btn {
       </p>
     </section>
 
-    <p class="footer">© <span id="y"></span> Dalbit • Crafted in pixels. All rights reserved.</p>
+    <p class="footer">© <span id="y"></span> Garyeong • Crafted in pixels at Dalbit Gallery. All rights reserved.</p>
   </main>
 
   <!-- 연도 표기 -->
