--- a/index.html
+++ b/index.html
@@ -170,9 +170,30 @@ button, .btn, button.btn {
     </section>
 
     <section id="gallery" class="grid">
-        <!-- 카드 0: Palma (NEW) -->
+
+       <!-- 카드 0: Coin laundry (NEW) -->
 <article class="card">
   <span class="badge-new">NEW ✦</span>
+  <a href="https://x.com/gxrxxxng/status/1986765906215936076?s=46"
+     target="_blank" rel="noopener"
+     aria-label="Coin laundry — X에서 보기"
+     style="position:relative; display:block;">
+    <img class="thumb" src="assets/images/251107-coin laundry-thumb.png?v=1"
+         alt="Coin laundry pixel art (X에서 보기)" />
+    <span class="badge">▶ Watch on X</span>
+  </a>
+
+  <div class="meta">
+    <h3 class="title">Coin Laundry 🫧</h3>
+    <p class="desc">돌아가는 건 세탁기지만, 세탁되는 건 세계다.</p>
+    <div class="row">
+      <span class="tiny"><span class="dot"></span>2025-11-07</span>
+    </div>
+  </div>
+</article>
+      
+        <!-- 카드 0: Palma (NEW) -->
+<article class="card">
   <a href="https://x.com/gxrxxxng/status/1986408424188633455?s=46"
      target="_blank" rel="noopener"
      aria-label="Palma — X에서 보기"
