--- a/index.html
+++ b/index.html
@@ -170,10 +170,29 @@ button, .btn, button.btn {
     </section>
 
     <section id="gallery" class="grid">
-
-       <!-- 카드 0: Coin laundry (NEW) -->
+        <!-- 카드 0: Bitgochi (NEW) -->
 <article class="card">
   <span class="badge-new">NEW ✦</span>
+  <a href="https://x.com/gxrxxxng/status/1987109638538662217?s=46"
+     target="_blank" rel="noopener"
+     aria-label="Bitgochi — X에서 보기"
+     style="position:relative; display:block;">
+    <img class="thumb" src="assets/images/251108-bitgochi.png?v=1"
+         alt="Bitgochi pixel art (X에서 보기)" />
+    <span class="badge">▶ Watch on X</span>
+  </a>
+
+  <div class="meta">
+    <h3 class="title">The bitcoin is born 🎁</h3>
+    <p class="desc">블록에서 태어나, 시간 위에 쌓인다.</p>
+    <div class="row">
+      <span class="tiny"><span class="dot"></span>2025-11-08</span>
+    </div>
+  </div>
+</article>
+      
+       <!-- 카드 0: Coin laundry (NEW) -->
+<article class="card">
   <a href="https://x.com/gxrxxxng/status/1986765906215936076?s=46"
      target="_blank" rel="noopener"
      aria-label="Coin laundry — X에서 보기"
