--- a/index.html
+++ b/index.html
@@ -170,9 +170,30 @@ button, .btn, button.btn {
     </section>
 
     <section id="gallery" class="grid">
-        <!-- 카드 0: Bitgochi (NEW) -->
+
+        <!-- 카드 0: Signal from Bit Tower (NEW) -->
 <article class="card">
   <span class="badge-new">NEW ✦</span>
+  <a href="https://x.com/gxrxxxng/status/1987509812184416576?s=46"
+     target="_blank" rel="noopener"
+     aria-label="Signal from Bit Tower — X에서 보기"
+     style="position:relative; display:block;">
+    <img class="thumb" src="assets/images/251109-bitcatnight-thumb.png?v=1"
+         alt="Signal from Bit Tower (X에서 보기)" />
+    <span class="badge">▶ Watch on X</span>
+  </a>
+
+  <div class="meta">
+    <h3 class="title">Signal from Bit Tower 🗼</h3>
+    <p class="desc">홀로 선 고양이, 어딘가 닿기를 바라며 빛을 바라본다.</p>
+    <div class="row">
+      <span class="tiny"><span class="dot"></span>2025-11-09</span>
+    </div>
+  </div>
+</article>
+      
+        <!-- 카드 0: Bitgochi (NEW) -->
+<article class="card">
   <a href="https://x.com/gxrxxxng/status/1987109638538662217?s=46"
      target="_blank" rel="noopener"
      aria-label="Bitgochi — X에서 보기"
