--- a/index.html
+++ b/index.html
@@ -171,9 +171,29 @@ button, .btn, button.btn {
 
     <section id="gallery" class="grid">
 
-        <!-- 카드 0: Signal from Bit Tower (NEW) -->
+       <!-- 카드 0: Egg bread (NEW) -->
 <article class="card">
   <span class="badge-new">NEW ✦</span>
+  <a href="https://x.com/gxrxxxng/status/1988586617595220249?s=46"
+     target="_blank" rel="noopener"
+     aria-label="Egg bread — X에서 보기"
+     style="position:relative; display:block;">
+    <img class="thumb" src="assets/images/251112-egg bread-thumb.png?v=1"
+         alt="Egg bread (X에서 보기)" />
+    <span class="badge">▶ Watch on X</span>
+  </a>
+
+  <div class="meta">
+    <h3 class="title">1000 sats of Warmth 🍞</h3>
+    <p class="desc">1000사츠면 충분하다. 따뜻함을 사기엔.</p>
+    <div class="row">
+      <span class="tiny"><span class="dot"></span>2025-11-12</span>
+    </div>
+  </div>
+</article>
+
+        <!-- 카드 0: Signal from Bit Tower (NEW) -->
+<article class="card">
   <a href="https://x.com/gxrxxxng/status/1987509812184416576?s=46"
      target="_blank" rel="noopener"
      aria-label="Signal from Bit Tower — X에서 보기"
