--- a/index.html
+++ b/index.html
@@ -171,9 +171,29 @@ button, .btn, button.btn {
 
     <section id="gallery" class="grid">
 
-       <!-- 카드 0: Egg bread (NEW) -->
+       <!-- 카드 0: MY tiny bitcoin shelf (NEW) -->
 <article class="card">
   <span class="badge-new">NEW ✦</span>
+  <a href="https://x.com/gxrxxxng/status/1988932907881402691?s=46"
+     target="_blank" rel="noopener"
+     aria-label="Egg bread — X에서 보기"
+     style="position:relative; display:block;">
+    <img class="thumb" src="assets/images/251113-mybitcoincenter-thumb.png?v=1"
+         alt="bitcoin shelf (X에서 보기)" />
+    <span class="badge">▶ Watch on X</span>
+  </a>
+
+  <div class="meta">
+    <h3 class="title">Tiny Bitcoin Collection 🍊</h3>
+    <p class="desc">내 방의 작은 비트코인 타워.</p>
+    <div class="row">
+      <span class="tiny"><span class="dot"></span>2025-11-13</span>
+    </div>
+  </div>
+</article>
+
+       <!-- 카드 0: Egg bread (NEW) -->
+<article class="card">
   <a href="https://x.com/gxrxxxng/status/1988586617595220249?s=46"
      target="_blank" rel="noopener"
      aria-label="Egg bread — X에서 보기"
