--- a/index.html
+++ b/index.html
@@ -171,9 +171,29 @@ button, .btn, button.btn {
 
     <section id="gallery" class="grid">
 
-       <!-- 카드 0: Pac-BTC (NEW) -->
+        <!-- 카드 0: 2025 mini conference (NEW) -->
 <article class="card">
   <span class="badge-new">NEW ✦</span>
+  <a href="https://x.com/gxrxxxng/status/1989668977505964369?s=46"
+     target="_blank" rel="noopener"
+     aria-label="2025 mini conference — X에서 보기"
+     style="position:relative; display:block;">
+    <img class="thumb" src="assets/images/251115-miniconference.png?v=1"
+         alt="2025 mini conference (X에서 보기)" />
+    <span class="badge">▶ Watch on X</span>
+  </a>
+
+  <div class="meta">
+    <h3 class="title">2025 mini conference 🌕</h3>
+    <p class="desc">비트코인을 비추는 날.</p>
+    <div class="row">
+      <span class="tiny"><span class="dot"></span>2025-11-15</span>
+    </div>
+  </div>
+</article>
+
+       <!-- 카드 0: Pac-BTC (NEW) -->
+<article class="card">
   <a href="https://x.com/gxrxxxng/status/1989328925781287404?s=46"
      target="_blank" rel="noopener"
      aria-label="Egg bread — X에서 보기"
