--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ button, .btn, button.btn {
 
   <div class="meta">
     <h3 class="title">Rabbit hole 🐇</h3>
-    <p class="desc">아래로 내려갈수록, ₿은 더 밝게 빛났다.</p>
+    <p class="desc">아래로 내려갈수록, 비트코인은 더 밝게 빛났다.</p>
     <div class="row">
       <span class="tiny"><span class="dot"></span>2025-11-15</span>
     </div>
