--- a/index.html
+++ b/index.html
@@ -171,9 +171,30 @@ button, .btn, button.btn {
 
     <section id="gallery" class="grid">
 
-      <!-- 카드 0: Rabbit hole (NEW) -->
+       <!-- 카드 0: p2p 79sats (NEW) -->
 <article class="card">
   <span class="badge-new">NEW ✦</span>
+  <a href="https://x.com/gxrxxxng/status/1990387916174983451?s=46"
+     target="_blank" rel="noopener"
+     aria-label="p2p 79sats — X에서 보기"
+     style="position:relative; display:block;">
+    <img class="thumb" src="assets/images/251117-p2p79sats-thumb.png?v=1"
+         alt="p2p 79sats (X에서 보기)" />
+    <span class="badge">▶ Watch on X</span>
+  </a>
+
+  <div class="meta">
+    <h3 class="title">Two Wallets, One Signal ⚡️</h3>
+    <p class="desc">우리가 만든 작은 네트워크.</p>
+    <div class="row">
+      <span class="tiny"><span class="dot"></span>2025-11-17</span>
+    </div>
+  </div>
+</article>
+
+
+      <!-- 카드 0: Rabbit hole (NEW) -->
+<article class="card">
   <a href="https://x.com/gxrxxxng/status/1990022843900530693?s=46"
      target="_blank" rel="noopener"
      aria-label="Rabbit hole — X에서 보기"
@@ -187,7 +208,7 @@ button, .btn, button.btn {
     <h3 class="title">Rabbit hole 🐇</h3>
     <p class="desc">아래로 내려갈수록, 비트코인은 더 밝게 빛났다.</p>
     <div class="row">
-      <span class="tiny"><span class="dot"></span>2025-11-15</span>
+      <span class="tiny"><span class="dot"></span>2025-11-16</span>
     </div>
   </div>
 </article>
