--- a/index.html
+++ b/index.html
@@ -171,9 +171,29 @@ button, .btn, button.btn {
 
     <section id="gallery" class="grid">
 
-       <!-- 카드 0: p2p 79sats (NEW) -->
+      <!-- 카드 0: bit-planet (NEW) -->
 <article class="card">
   <span class="badge-new">NEW ✦</span>
+  <a href="https://x.com/gxrxxxng/status/1991117663322755425?s=46"
+     target="_blank" rel="noopener"
+     aria-label="p2p 79sats — X에서 보기"
+     style="position:relative; display:block;">
+    <img class="thumb" src="assets/images/251119-bitplanet.png?v=1"
+         alt="bit-planet (X에서 보기)" />
+    <span class="badge">▶ Watch on X</span>
+  </a>
+
+  <div class="meta">
+    <h3 class="title">Toward a Better Planet 🚀</h3>
+    <p class="desc">감시의 궤도를 벗어나, 내가 선택한 행성으로 향한다.</p>
+    <div class="row">
+      <span class="tiny"><span class="dot"></span>2025-11-19</span>
+    </div>
+  </div>
+</article>
+
+       <!-- 카드 0: p2p 79sats (NEW) -->
+<article class="card">
   <a href="https://x.com/gxrxxxng/status/1990387916174983451?s=46"
      target="_blank" rel="noopener"
      aria-label="p2p 79sats — X에서 보기"
