--- a/index.html
+++ b/index.html
@@ -171,12 +171,33 @@ button, .btn, button.btn {
 
     <section id="gallery" class="grid">
 
-      <!-- 카드 0: bit-planet (NEW) -->
+       <!-- 카드 0: keyringsigner (NEW) -->
 <article class="card">
   <span class="badge-new">NEW ✦</span>
+  <a href="https://x.com/gxrxxxng/status/1991865506555666599?s=46"
+     target="_blank" rel="noopener"
+     aria-label="keyringsigner — X에서 보기"
+     style="position:relative; display:block;">
+    <img class="thumb" src="assets/images/251121-keyringsigner.png?v=1"
+         alt="keyringsigner (X에서 보기)" />
+    <span class="badge">▶ Watch on X</span>
+  </a>
+
+  <div class="meta">
+    <h3 class="title">SeedSigner with Charms 🩷</h3>
+    <p class="desc">나만의 'Bitcoin KEY' RING.</p>
+    <div class="row">
+      <span class="tiny"><span class="dot"></span>2025-11-21</span>
+    </div>
+  </div>
+</article>
+
+
+      <!-- 카드 0: bit-planet (NEW) -->
+<article class="card">
   <a href="https://x.com/gxrxxxng/status/1991117663322755425?s=46"
      target="_blank" rel="noopener"
-     aria-label="p2p 79sats — X에서 보기"
+     aria-label="bit-planet — X에서 보기"
      style="position:relative; display:block;">
     <img class="thumb" src="assets/images/251119-bitplanet.png?v=1"
          alt="bit-planet (X에서 보기)" />
