--- a/index.html
+++ b/index.html
@@ -171,9 +171,29 @@ button, .btn, button.btn {
 
     <section id="gallery" class="grid">
 
-       <!-- 카드 0: keyringsigner (NEW) -->
+      <!-- 카드 0: orange cat (NEW) -->
 <article class="card">
   <span class="badge-new">NEW ✦</span>
+  <a href="https://x.com/gxrxxxng/status/1994342411296797152?s=46"
+     target="_blank" rel="noopener"
+     aria-label="orange cat — X에서 보기"
+     style="position:relative; display:block;">
+    <img class="thumb" src="assets/images/251128-orange cat.png?v=1"
+         alt="orange cat (X에서 보기)" />
+    <span class="badge">▶ Watch on X</span>
+  </a>
+
+  <div class="meta">
+    <h3 class="title">Orange cat 🐈</h3>
+    <p class="desc">비트코인의 온기 속에 잠든 오렌지.</p>
+    <div class="row">
+      <span class="tiny"><span class="dot"></span>2025-11-28</span>
+    </div>
+  </div>
+</article>
+
+       <!-- 카드 0: keyringsigner (NEW) -->
+<article class="card">
   <a href="https://x.com/gxrxxxng/status/1991865506555666599?s=46"
      target="_blank" rel="noopener"
      aria-label="keyringsigner — X에서 보기"
