--- a/index.html
+++ b/index.html
@@ -626,7 +626,7 @@ button, .btn, button.btn {
     <section id="contact" class="hero" style="padding-top:20px">
       <h2>Contact</h2>
       <p class="tiny">
-        X: <a class="inline" href="https://x.com/gxrxxxng?s=21" target="_blank">@gxrxxxng</a> · Lightning: <span id="lnaddr" class="kbd">garyeong@strike.me</span>
+        X: <a class="inline" href="https://x.com/gxrxxxng?s=21" target="_blank">@gxrxxxng</a> · Lightning: <span id="lnaddr" class="kbd">garyeong@walletofsatoshi.com</span>
       </p>
     </section>
 
@@ -641,7 +641,7 @@ button, .btn, button.btn {
   <!-- ⚡ Lightning 주소 복사 스크립트 -->
   <script>
     (function () {
-      const LIGHTNING_ADDRESS = 'garyeong@strike.me';
+      const LIGHTNING_ADDRESS = 'garyeong@walletofsatoshi.com';
       const btn = document.getElementById('tipCopyBtn');
 
       async function copy(text) {
