--- a/index.html
+++ b/index.html
@@ -171,9 +171,30 @@ button, .btn, button.btn {
 
     <section id="gallery" class="grid">
 
-      <!-- 카드 0: orange cat (NEW) -->
+        <!-- 카드 0: winter miner (NEW) -->
 <article class="card">
   <span class="badge-new">NEW ✦</span>
+  <a href="https://x.com/gxrxxxng/status/1997664170062283246?s=46"
+     target="_blank" rel="noopener"
+     aria-label="winter miner — X에서 보기"
+     style="position:relative; display:block;">
+    <img class="thumb" src="assets/images/251206-wintermining-thumb.png?v=1"
+         alt="winter miner (X에서 보기)" />
+    <span class="badge">▶ Watch on X</span>
+  </a>
+
+  <div class="meta">
+    <h3 class="title">Silence Outside, Signal Inside ❄️</h3>
+    <p class="desc">고요한 도시 위로, 채굴기의 신호만 흐른다.</p>
+    <div class="row">
+      <span class="tiny"><span class="dot"></span>2025-12-07</span>
+    </div>
+  </div>
+</article>
+
+
+      <!-- 카드 0: orange cat (NEW) -->
+<article class="card">
   <a href="https://x.com/gxrxxxng/status/1994342411296797152?s=46"
      target="_blank" rel="noopener"
      aria-label="orange cat — X에서 보기"
